A lot of changes

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlConnection": "Server=localhost;Port=3306;Database=db_overtime;Uid=root;Pwd=!Kaibee333"
+  },
+  "EmailSettings": {
+    "SMTPServer": "localhost",
+    "SMTPPort": 2525,
+    "MailFrom": "codingcamp@mii.co.id",
+    "MailUsername": "username email to authenticate to the mail server",
+    "MailPassword": "password to authenticate to the mail server"
   }
 }
