Add authentication and authorization using jwt

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -15,5 +15,11 @@
     "MailFrom": "codingcamp@mii.co.id",
     "MailUsername": "username email to authenticate to the mail server",
     "MailPassword": "password to authenticate to the mail server"
+  },
+  "Jwt": {
+    "Key": "0vErT1m3SYstemm4n464mEn3tmBKM6KampusMerdeka",
+    "Issuer": "https://api.overtime.com",
+    "Audience": "https://overtime.com",
+    "DurationInMinutes": 10
   }
 }
